--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@testing-library/user-event": "14.5.1",
     "@types/faker": "5.5.9",
     "@types/leaflet": "1.9.3",
+    "@types/lodash": "^4.17.0",
     "@types/react": "18.2.25",
     "@types/react-dom": "18.2.11",
     "@types/react-redux": "7.1.27",
